--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,11 @@
 [env]
 lib_deps = 
     arduino-libraries/Servo@^1.2.1
+build_flags =
+    -std=c++17
+    -std=gnu++17
+build_unflags =
+    -std=gnu++11
 
 [env:uno]
 platform = atmelavr
